# pg-presto

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: report.json
examples/athena/: advanced_arrays.sql  billing.sql  complex_report.sql  jsonb_processing.sql  limitations.sql  regex_parsing.sql  time_series.sql  traps.sql  user_events.sql
examples/postgresql/: advanced_arrays.sql  billing.sql  complex_report.sql  cte_windowing.sql  jsonb_processing.sql  limitations.sql  nested_json_edge_cases.sql  regex_parsing.sql  set_operations.sql  time_series.sql  traps.sql  unsupported_json_table_functions.sql  unsupported_recordset_functions.sql  unsupported_text_functions.sql  user_events.sql
src/pg_aegis/: cli.py
src/pg_presto/: cli.py
tests/: test_cli.py  test_pg_aegis_cli.py
tests/golden/: cte_windowing.out.sql  nested_json_edge_cases.out.sql  unsupported_json_table_functions.out.sql  unsupported_json_table_functions.warnings.txt  unsupported_recordset_functions.out.sql  unsupported_recordset_functions.warnings.txt  unsupported_text_functions.out.sql  unsupported_text_functions.warnings.txt
