[project]
name = "pg-aegis"
version = "0.1.0"
description = "A tool to convert PostgreSQL SQL files to Athena-compatible SQL."
readme = "README.md"
authors = [{ name = "William Allen", email = "wallentx@linux.com" }]
requires-python = ">=3.9"
dependencies = [
    "sqlglot>=20.0.0",
]

[project.scripts]
pg-aegis = "pg_aegis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "shiv>=1.0.8",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
